{
    "name": "SeagullInput",
    "maps": [
        {
            "name": "CharacterActions",
            "id": "a46d26d0-f122-4ada-8edc-db9f8fc987f3",
            "actions": [
                {
                    "name": "MovementInput",
                    "type": "Value",
                    "id": "c4f4cc93-1c41-4181-b355-35ccf3a49f17",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLocation",
                    "type": "Value",
                    "id": "802fa275-f34f-462a-944a-5a035abdc85a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpAction",
                    "type": "Button",
                    "id": "6276016b-cc65-4e71-b3b2-d00a88acab77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwallowAction",
                    "type": "Button",
                    "id": "ab4842fd-5ee3-4a96-b7c9-fc1bc63569dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "77fb21ec-cac8-46a7-9ef9-ee64d16e8a76",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d8efa595-f432-4933-8251-c80ef18f0479",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7762740a-9afa-434e-9abc-a0a1dbd168fc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2e8c3622-722f-4aee-bac3-7a3e265c684f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "166a1803-d9c1-42c6-97b6-8ef5ee833c67",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9ef9fac6-3b01-42e2-866d-ba919d9230c1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f17b7220-a3a6-4b6f-9699-36336dc12cca",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87203ea7-76ef-4b87-8c3f-57405a48eed2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwallowAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraActions",
            "id": "44ac28cf-aff0-407c-87c3-03824f470252",
            "actions": [
                {
                    "name": "ChangeToNextCameraAction",
                    "type": "Button",
                    "id": "4eca24e6-bbb5-42e3-9666-acf6e23d02a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeToPreviousCameraAction",
                    "type": "Button",
                    "id": "3cf9cff5-77ce-4310-bb45-99b6fb1bccc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCameraView",
                    "type": "Value",
                    "id": "63a5bf5d-7311-4070-9396-f3d7427edf68",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCameraYaw",
                    "type": "Value",
                    "id": "0606bbde-c50b-4de9-9714-4424f63b24d2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCameraPitch",
                    "type": "Value",
                    "id": "b52890ac-ddb9-49f3-983f-89af360c39d9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e366ff99-e0dd-4558-9829-db0829027f6c",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToNextCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dfe911a-42b6-42c8-ada3-2b48606a152f",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeToPreviousCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse",
                    "id": "fc1e1bf5-4f7d-4cdb-9e39-81884e1fc990",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCameraView",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "95ad964b-2bf2-496b-b58c-2e986def787d",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCameraView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "66b9c0a0-28a6-4798-94d5-9eb223db1215",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCameraView",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "ae042118-83ac-412e-8e52-c38d29a00c5b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraYaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9b6f981b-9fcb-40b8-b616-03056d5a4008",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraYaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "39cf7b53-ca52-48f8-a105-33528e46163a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraYaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "46a25397-fc2a-46a4-acc3-34c7f670b82d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraPitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aab482a7-978f-43f4-ae8c-2ca680059cae",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraPitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "77cf8a35-8f3a-485a-9d4b-120dd081894f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraPitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "GameModeActions",
            "id": "cbcaae17-6402-475e-a0d5-6ebb862e26bd",
            "actions": [
                {
                    "name": "PauseGameAction",
                    "type": "Button",
                    "id": "b6c7216a-787d-41c3-b3e7-e1ca2609a6bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "183e0382-aa26-4a25-98d9-3e5b9830dc37",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGameAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AbilityActions",
            "id": "0f8ecf59-3600-42c8-a3f2-b40bf6f3f0a4",
            "actions": [
                {
                    "name": "ActiveAbilityAction1",
                    "type": "Button",
                    "id": "5335b72d-10c4-4010-a5f0-ceba1fff353a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActiveAbilityAction2",
                    "type": "Button",
                    "id": "61d48f2c-4bf9-412e-8730-a05b2e8e14eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActiveAbilityAction3",
                    "type": "Button",
                    "id": "4f5f8794-29fd-4192-8d3a-531bf675fc65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActiveAbilityAction4",
                    "type": "Button",
                    "id": "79a0b840-0e68-436a-9c56-24ad9f1b6d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActiveAbilityAction5",
                    "type": "Button",
                    "id": "88c07224-d7d4-455f-af68-c381173e1154",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActiveAbilityAction6",
                    "type": "Button",
                    "id": "dfdcdf81-6f31-4d5d-931c-26dc40946071",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cda5f8fb-7540-455e-9e0e-0e89e1b3851b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7ceed4b-480e-4b7c-a936-e69c4282a292",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6334cec-203f-44ac-9e5d-9d37bd3f56ac",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ee57a54-5822-4cca-9623-7bf298ccbc50",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "832d4f8f-d4e4-41b6-aa31-a574b46ee4ce",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e78a102-f055-4076-9b8f-71f5e01eb490",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActiveAbilityAction6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}